[package]
name = "hello"
version = "0.1.0"
edition = "2021"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
build = "build.rs"
publish = false

[dependencies]
pyo3 = "0.23.3"
pyo3-built = { path = "../.." }

[build-dependencies]
built = { version = "0.7.2", features = ["chrono", "cargo-lock"] }

[lib]
crate-type = ["cdylib"]
path = "lib.rs"
